# CircleBuffer

./: CMakeLists.txt  CircleBuffer.cpp  CircleBuffer.h  CircleBuffer.vcxproj  CircleBuffer.vcxproj.filters  README.md
headers/: CircleBuffer.h
lib/: CircleBuffer.lib
source/: CircleBuffer.cpp
tests/: main.cpp
